--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -1,7 +1,129 @@
 ﻿@page "/"
+@rendermode InteractiveServer
+@using Azure
+@using Azure.AI
+@using Azure.AI.OpenAI
+@inject IConfiguration _configuration
 
-<PageTitle>Home</PageTitle>
+@code {
+    OpenAIClient _api = null;
+    bool _processing = false;
+    string _prompt = "";
+    string _errorMessage = "";
+    List<DisplayMessage> _messages = new List<DisplayMessage>();
 
-<h1>Hello, world!</h1>
+    #region methods
+    ChatCompletionsOptions GetChatCompletionsOptions()
+    {
+        var chatCompletionsOptions = new ChatCompletionsOptions()
+        {
+            DeploymentName = "gpt35",
+            Messages =
+                {
+                    new ChatRequestSystemMessage("You are a helpful asssistant thata is obsessed with cookies and talk about them all the time"),
+                },
+            MaxTokens = 100
+        };
 
-Welcome to your new app.
+        foreach(var message in _messages){
+            if (message.Role == ChatRole.User)
+                chatCompletionsOptions.Messages.Add(new ChatRequestUserMessage(message.Message));
+            else if (message.Role == ChatRole.Assistant)
+                chatCompletionsOptions.Messages.Add(new ChatRequestAssistantMessage(message.Message));
+        }    
+        return chatCompletionsOptions;
+    }
+
+    #endregion
+
+    #region event handlers
+    protected override void OnInitialized()
+    {
+        var endpoint = _configuration["OpenAIServiceConfig:EndPoint"] ?? "";
+        var apiKey = _configuration["OpenAIServiceConfig:ApiKey"] ?? "";
+        _api = new OpenAIClient(new Uri(endpoint), new AzureKeyCredential(apiKey));
+    }
+
+    void ResetChat()
+    {
+        _prompt = "";
+        _errorMessage = "";
+        _messages = new List<DisplayMessage>();
+        StateHasChanged();
+    }
+
+    async Task SendPrompt()
+    {
+        try
+        {
+            _processing = true;
+            _errorMessage = "";
+            StateHasChanged();
+            //add current message to the list
+            var currentMessage = new DisplayMessage(ChatRole.User, _prompt);
+            _messages.Add(currentMessage);
+            //send to the api
+            Response<ChatCompletions> response = await _api.GetChatCompletionsAsync(GetChatCompletionsOptions());
+            ChatResponseMessage responseMessage = response.Value.Choices[0].Message;
+            _messages.Add(new DisplayMessage(ChatRole.Assistant, responseMessage.Content));
+
+        }
+        catch (Exception ex)
+        {
+            _errorMessage = ex.Message;
+        }
+        finally
+        {
+            _prompt = "";
+            _processing = false;
+            StateHasChanged();
+        }
+    }
+    #endregion
+}
+<PageTitle>Demo</PageTitle>
+
+<h1>Let's chat!</h1>
+<div class="chat-area">
+    @foreach (var item in _messages)
+    {
+        @if (item.Role == ChatRole.User)
+        {
+            <div class="user">
+                <b>User</b>
+                <div class="content">
+                    @item.Message
+                </div>
+            </div>
+        }
+        else
+        {
+            <div class="assistant">
+                <b>Assitant</b>
+                <div class="content">
+                    @if (item.Message != null)
+                    {
+                        @((MarkupString)item.Message)
+                    }
+                </div>
+            </div>
+        }
+    }
+</div>
+@if (!_processing)
+{
+    <textarea rows="3" cols="60" @bind="_prompt" class="chat-input" />
+    <br />
+    <button class="btn btn-primary" @onclick="SendPrompt">
+        Submit
+    </button>
+    <span>&nbsp;</span>
+    <button class="btn btn-info" @onclick="ResetChat">
+        Reset
+    </button>
+}
+else
+{
+    <br>
+    <h4>Processing...</h4>
+}
