--- a/wwwroot/app.css
+++ b/wwwroot/app.css
@@ -49,3 +49,44 @@ h1:focus {
 .darker-border-checkbox.form-check-input {
     border-color: #929292;
 }
+
+.chat-area{
+    border: 1px solid #ccc;
+    height:550px; width:80%; overflow: scroll;
+    padding:10px
+    
+}
+
+.user {
+    float: right;
+    margin-top: 10px;
+    padding: 5px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    background: #4cd96f;
+    min-width: 50%;
+    text-align: right
+}
+
+.assistant {
+    float: left;
+    margin-top: 10px;
+    padding: 5px;
+    border-radius: 5px;
+    border: 1px solid #ccc;
+    background: #70b0db;
+    min-width: 50%;
+
+}
+
+.chat-input {
+    border: 1px dashed #888;
+    border-radius: 5px;
+    width: 80%;
+    overflow: auto;
+    background: #f7f7f7
+}
+
+.msg {
+    font-size: medium;
+}
