--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -87,6 +87,7 @@
 <div class="chat-area">
     @foreach (var item in _messages)
     {
+        <div class="message">
         @if (item.Role == ChatRole.User)
         {
             <div class="user">
@@ -103,11 +104,12 @@
                 <div class="content">
                     @if (item.Message != null)
                     {
-                        @((MarkupString)item.Message)
+                        @((MarkupString)item.Message.ReplaceLineEndings("<br>"))
                     }
                 </div>
             </div>
         }
+        </div>
     }
 </div>
 @if (!_processing)
